8336830: C2: assert(get_loop(lca)->_nest < n_loop->_nest || lca->in(0)->is_NeverBranch()) failed: must not be moved into inner loop

Co-authored-by: Emanuel Peter <epeter@openjdk.org>
Reviewed-by: thartmann, chagedorn, epeter